// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes routes to / correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <h1>
    Home
  </h1>
</div>
`;

exports[`Routes routes to /add-group correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Group
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="nameLabel"
        >
          Name
        </label>
        <input
          aria-labelledby="nameLabel"
          class="form-control form-control-lg"
          id="name"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Add Group
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Routes routes to /add-topic correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          type="topic"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          type="topic"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Routes routes to /login correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Login
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="emailLabel"
        >
          Email
        </label>
        <input
          aria-labelledby="emailLabel"
          class="form-control form-control-lg"
          id="email"
          placeholder="email"
          type="email"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="passwordLabel"
        >
          Password
        </label>
        <input
          aria-labelledby="passwordLabel"
          class="form-control form-control-lg"
          id="password"
          placeholder="password"
          type="password"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Log In
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Routes routes to /signup correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Sign Up
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="emailLabel"
        >
          Email
        </label>
        <input
          aria-labelledby="emailLabel"
          class="form-control form-control-lg"
          id="email"
          placeholder="email"
          type="email"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="nameLabel"
        >
          Name
        </label>
        <input
          aria-labelledby="nameLabel"
          class="form-control form-control-lg"
          id="name"
          placeholder="name"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="passwordLabel"
        >
          Password
        </label>
        <input
          aria-labelledby="passwordLabel"
          class="form-control form-control-lg"
          id="password"
          placeholder="password"
          type="password"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Sign Up
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Routes routes to /topics correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Routes routes to not found correctly 1`] = `
<div>
  <div
    class="sc-gKckTs gIgbJI"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-hKwCoD jDkowu"
  >
    <div
      class="sc-eCImvq"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-jRQAMF"
    />
  </div>
  <h1>
    404: Not Found
  </h1>
</div>
`;
